display token & parsing tree and code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
     <div id="container"></div>
+    <hr />
+    <div class="code">
+      <div>
+        <h4>Tokens</h4>
+        <div id="token"></div>
+      </div>
+      <div>
+        <h4>Parsing tree</h4>
+        <div id="parse_tree"></div>
+      </div>
+      <div>
+        <h4>Code</h4>
+        <div id="code"></div>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
